updated the HTML

--- a/learnhtml.html
+++ b/learnhtml.html
@@ -6,70 +6,112 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
+    <title>Figma Project</title>
 </head>
 
 <body>
-    <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#about">About Me</a>
-        <a href="#gallery">Gallery</a>
-        <a href="#clients">Clients</a>
-        <a href="#contact">Contact Me</a>
+    <div class="body-background">
+
+        <ul class="ul">
+            <li class="list"><a href class="about">About Me</a></li>
+            <li class="list"><a href class="gallery">Gallery</a></li>
+            <li class="list"><a href class="clients">Clients</a></li>
+            <li class="list"><a href class="contact">Contact Me</a></li>
+        </ul>
+
+        <section class="s1">
+            <h1 class="hero">Hello, <br>I am Paul Amusan</h1>
+            <p id="intro">Paul Amusan is a young, energetic, and talented fashion designer who focuses on his men's clothing line, Paul Amusan. His work draws inspiration from local Nigerian fabrics coupled with Japanese tailoring designs. His designs are masculine,
+                yet modern and trendy by way of transforming an ordinary look into a sophisticated design that embraces elegance.</p>
+            <button>Hire Me</button>
+
+            <ul class="ul1">
+                <li class="list"><i class="fa-brands fa-twitter"></i></li>
+                <li class="list"><i class="fa-brands fa-instagram"></i></li>
+                <li class="list"><i class="fa-brands fa-youtube"></i></li>
+            </ul>
+
+        </section>
     </div>
-    <section>
-        <h1>Hello, I am Paul Amusan</h1>
-        <img src="/img/james-barr-zy5JTdcC0fE-unsplash 1.jpg" alt="an image of a guy">
-        <p>Paul Amusan is a young, energetic, and talented fashion designer who focuses on his men's clothing line, Paul Amusan. His work draws inspiration from local Nigerian fabrics coupled with Japanese tailoring designs. His designs are masculine, yet
-            modern and trendy by way of transforming an ordinary look into a sophisticated design that embraces elegance.</p>
-        <button>Hire Me</button>
-    </section>
-    <section>
-        <p>Paul Amusan is a young, energetic, and talented fashion designer who focuses o his men's clothing line, Paul Amusan. His work draws inspiration from local Nigerian fabrics coupled with Japanese tailoring designs. His designs are masculine, yet
-            modern and trendy by way of transforming an ordinary look into a sophisticated design that embraces elegance.</p><br>
-        <p>I began acquired his love for fashion when he was a young boy where he spent his time sketching and drawing. He loves to work with colours, and his awesome talent has seen his pieces worn by famous politicians and celebrities. Young and succesful,
-            he is a talented fashion designer to watch out for as his name continues to cause ripples in both the local and global fashion industries.</p><br>
-        <p>While in New York, I was employed in the Charivari Boutique where president of the company, Barbara Weiser, noticed my potential and passion for unique fashion and helped me launch my first fashion collection. My passion for African fashion is
-            profound. "Everything begins for me with the print and fabric, which usually has some shine", exclaims Faturoti. My deep African roots, as well as extensive global experience with having lived and worked in New York and Milan have been instrumental
-            in her success and international spotlight.</p><br>
-        <p>Mmy pieces are also sold globally in the UK,US, and France. Anthony uses his talent to make an impact on the community through mentoring program he runs that helps young and upcoming Nigerian designers excel and compete on a global platform. Nature,
-            colors, and artwork are his main sources of inspiration.</p><br>
-        <section>
-            <h1>Gallery</h1>
-            <p>Have a look at a collection of my recent works</p>
+
+    <div class="about-me">
+        <section class="s2">
+            <img src="/FigmaProject/img/autri-taheri-Vj2zHsZ1uqw-unsplash 1.jpg" alt="image of a guy" class="aboutimg">
+            <div class="para">
+                <h2>About Me</h2>
+                <p>Paul Amusan is a young, energetic, and talented fashion designer who focuses on his men's clothing line, Paul Amusan. His work draws inspiration from local Nigerian fabrics coupled with Japanese tailoring designs. His designs are masculine,
+                    yet modern and trendy by way of transforming an ordinary look into a sophisticated design that embraces elegance.</p>
+                <p>I began acquired his love for fashion when he was a young boy where he spent his time sketching and drawing. He loves to work with colors, and his awesome talent has seen his pieces worn by famous politicians and celebrities. Young and
+                    successful, he is a talented fashion designer to watch out for as his name continues to cause ripples in both the local and global fashion industries.</p>
+                <p>While in New York, I was employed in the Charivari Boutique where president of the company, Barbara Weiser, noticed my potential and passion for unique fashion and helped me launch my first fashion collection. My passion for African fashion
+                    is profound. "Everything begins for me with the print and fabric, which usually has some shine", exclaims Faturoti. My deep African roots, as well as extensive global experience with having lived and worked in New York and Milan have
+                    been instrumental in her success and international spotlight.</p>
+                <p>Mmy pieces are also sold globally in the UK,US, and France. Anthony uses his talent to make an impact on the community through mentoring program he runs that helps young and upcoming Nigerian designers excel and compete on a global platform.
+                    Nature, colors, and artwork are his main sources of inspiration.</p>
+            </div>
         </section>
-        <button>View All</button>
-        <section>
-            <h1>Our Clients</h1>
-            <p>I have built my reputation working with these top brands</p>
-        </section>
-        <div>
-            <h1>CHECK DC</h1>
-            <h1>VOGUE</h1>
-            <h1>TERRA kulture</h1>
+    </div>
+
+    <div class="gallery">
+        <h1>Gallery</h1>
+        <p>Have a look at a collection of my recent works</p>
+        <div class="grid-container">
+            <img src="/FigmaProject/img/daniel-schaffer-l8XuuamEfYU-unsplash 1.jpg" alt="image of a guy" class="item">
+            <img src="/FigmaProject/img/joanna-nix-walkup-IRi-FlOdjFU-unsplash 1.jpg" alt="image of a guy" class="item">
+            <img src="/FigmaProject/img/nick-karvounis-0lzxrijewmY-unsplash 1.jpg" alt="image of a guy" class="item">
+            <img src="/FigmaProject/img/hls-44-oCwkft-Juug-unsplash 1.jpg" alt="image of a guy" class="item">
+            <img src="/FigmaProject/img/peter-sjo-Nxy-6QwGMzA-unsplash 1.jpg" alt="image of a guy" class="item">
+            <img src="/FigmaProject/img/analise-benevides-Y9O5u1kwdbk-unsplash 1.jpg" alt="image of a guy" class="item">
         </div>
-        <div>
-            <form>
-                <h1>Contact Me</h1>
-                <p>Need Anything? Kindly fill this form</p>
-                <label for="name">Name</label><br>
-                <input type="text" id="name" name="name"><br>
-                <label for="email">Email</label><br>
-                <input type="text" id="email" name="email"><br>
-                <label for="subject">Subject</label><br>
-                <input type="text" id="subject" name="subject"><br>
-                <label for="message">Message</label><br>
-                <input type="text" id="message" name="message"><br>
-                <button>Send Message</button>
+        <button class="btn1">View All <i class="fa-solid fa-arrow-right-long fa-1x"></i></button>
+    </div>
+
+
+    <div class="clients">
+        <h1>Our Clients</h1>
+        <p>I have built my reputation working with these top brands</p>
+        <div class="client-container">
+            <img src="/FigmaProject/img/Group.png" alt="group" class="client-item">
+            <img src="/FigmaProject/img/layer1.png" alt="group" class="client-item">
+            <img src="/FigmaProject/img/Group 1.png" alt="group" class="client-item">
+        </div>
+    </div>
+    <br>
+    <br>
+    <div class="clients">
+        <h1>Contact Me</h1>
+        <p>Need Anything? Kindly fill this form</p>
+        <div class="forms">
+            <form class="s3">
+                <img src="/FigmaProject/img/autri-taheri-Vj2zHsZ1uqw-unsplash 1.jpg" alt="pic of a guy" class="aboutimg"><br>
+                <div class="para2">
+                    <label for="name">Name</label>
+                    <input type="text" id="text" name="name"><br>
+                    <label for="email">Email</label>
+                    <input type="email" id="text" name="email"><br>
+                    <label for="subject">Subject</label>
+                    <input type="text" id="text" name="subject"><br>
+                    <label for="message">Message</label>
+                    <input type="textarea" id="textarea" name="message"><br>
+                    <button>Send Message</button>
             </form>
-            <footer>Copyright 2020 All rights reserved| Paul Amusan</footer>
-
+            </div>
         </div>
 
 
+        <footer class="footer">Copyright 2020 All rights reserved| Paul Amusan <br>
+            <ul class="ul2">
+                <li class="list"><i class="fa-brands fa-twitter"></i></li>
+                <li class="list"><i class="fa-brands fa-instagram"></i></li>
+                <li class="list"><i class="fa-brands fa-youtube"></i></li>
+            </ul>
+        </footer>
 
-    </section>
-    </p>
+    </div>
+
 </body>
 
 </html>
